# rates_monitor

./: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  instructions.md  main.py  manage.py  overview.md  plan.md  pyproject.toml
config/: settings.py  urls.py
deploy/: Caddyfile  deploy.sh  entrypoint.sh
docs/: deployment.md  guia-programacion.md  guia-usuario.md  programming-guide.md  user-guide.md
rates/: admin.py  apps.py  context_processors.py  cron.py  middleware.py  models.py  translations.py  urls.py  views.py
rates/management/commands/: fetch_rates.py  run_scheduler.py
rates/migrations/: 0001_initial.py  0002_currency_pair_pair_config.py  0003_seed_pairs.py  0004_finalize_exchange_rate.py  0005_purchase.py  0006_remove_alert_webhook_url.py
rates/services/: alerts.py  cross_pair.py  decision.py  fetcher.py  indicators.py  oer_fetcher.py  openexchangeapi.py
rates/templates/rates/: dashboard.html  login.html  overview.html
rates/templates/rates/partials/: config_form.html  purchases.html  stats.html
rates/templatetags/: rates_extras.py
templates/: base.html
tests/: conftest.py  factories.py  test_alerts.py  test_cron.py  test_cross_pair.py  test_decision.py  test_fetcher.py  test_indicators.py  test_middleware.py  test_models.py  test_oer_fetcher.py  test_template_tags.py  test_views.py
