[project]
name = "rates-monitor"
version = "0.1.0"
description = "Monitor currency exchange rates and send notifications when they change under goals."
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-crontab>=0.7.1",
    "gunicorn>=25.3.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
