[project]
name = "rates-monitor"
version = "0.1.0"
description = "Monitor currency exchange rates and send notifications when they change under goals."
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-crontab>=0.7.1",
    "gunicorn>=25.3.0",
    "python-decouple>=3.8",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests/test_*.py"]
addopts = "--cov=rates --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = ["rates/migrations/*", "rates/management/*", "rates/cron.py"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
